--- a/Test02/Views/PhongKho/ChiTietKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietKho.cshtml
@@ -52,7 +52,7 @@
                         <i class="fas fa-plus"></i>
                         Thêm chi tiết kho
                     </a>
-                    <a class="btn btn-primary btn-sm" href="/PhongKho/PhanPhoiSanPham" title="Phân phối sản phẩm" style="margin-left:20px;">
+                    <a class="btn btn-primary btn-sm" href="/PhongKho/PhanPhoiSanPham/@TempData["makho"]" title="Phân phối sản phẩm" style="margin-left:20px;">
                         <i class="fa fa-truck"></i>
                         Phân phối sản phẩm
                     </a>
@@ -115,9 +115,9 @@
                                     </td>
 
                                     <td>
-                                        <a href="/PhongKho/EditCTKho/@item.STT" class="btn btn-primary btn-sm edit" title="Chỉnh sửa">
+                                        @*<a href="/PhongKho/EditCTKho/@item.STT" class="btn btn-primary btn-sm edit" title="Chỉnh sửa">
                                             <i class="fas fa-edit"></i>
-                                        </a>
+                                        </a>*@
                                         <a href="/PhongKho/DeleteCTKho/@item.STT" class="btn btn-primary btn-sm trash" title="Xóa kho">
                                             <i class="fas fa-trash-alt"></i>
                                         </a>
