--- a/Test02/Views/GiaoHang/ThemPhuongTienGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ThemPhuongTienGiaoHang.cshtml
@@ -7,55 +7,56 @@
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
 }
 
-<h2 style="text-align:center;">Thêm phương tiện giao hàng mới</h2> 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.MaPT, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MaPT, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MaPT, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TenPT, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TenPT, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TenPT, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TrongTai, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TrongTai, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TrongTai, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TinhTrang, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TinhTrang, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TinhTrang, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Thêm" class="btn btn-default" />
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="tile" style="margin-left:50px; margin-right:50px">
+                <div class="tile-body">
+                    <h3 class="tile-title" style="text-align:center">THÊM PHƯƠNG TIỆN GIAO HÀNG MỚI</h3>
+                    <div>
+                        <div class="form-horizontal">
+                            <hr />
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            @Html.HiddenFor(model => model.TinhTrang)
+                            <div class="form-group">
+                                <h5>Mã phương tiện:</h5>
+                                <div class="col-md-12">
+                                    @Html.EditorFor(model => model.MaPT, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.MaPT, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <h5>Tên phương tiện:</h5>
+                                <div class="col-md-12">
+                                    @Html.EditorFor(model => model.TenPT, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.TenPT, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <h5>Trọng tải:</h5>
+                                <div class="col-md-12">
+                                    @Html.EditorFor(model => model.TrongTai, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.TrongTai, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class="col-sm-2">
+                                    <input type="submit" value="Thêm" class="btn btn-success" title="Lưu" />
+                                </div>
+                                <div class="col-sm-2">
+                                    <a class="btn btn-danger" href="~/GiaoHang/DanhSachPhuongTienGiaoHang" title="Trở về">
+                                        Trở về
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Trở lại", "DanhSachPhuongTienGiaoHang")
-</div>
