--- a/Test02/Views/PhongKho/QuanLyKho.cshtml
+++ b/Test02/Views/PhongKho/QuanLyKho.cshtml
@@ -46,16 +46,38 @@
     }
 }
 
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="tile">
+                <h5>Tìm sản phẩm trong kho dựa vào đơn hàng</h5>
+                <input class="form-control" name="Masp" type="text" placeholder="Nhập mã sản phẩm!" />
+                <div style="margin-top:10px; text-align:center">
+                    <button type="submit" class="btn btn-outline-dark">Tìm kiếm</button>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
+}
+
 @* Danh sách kho hàng *@
 <div class="row">
     <div class="col-lg-12">
         <div class="tile">
             <h3 class="tile-title" style="text-align:center;"><b>DANH SÁCH KHO HÀNG</b></h3>
             <div class="tile-body table-responsive-sm">
-                <div class="row element-button">    
+                <div class="row element-button">
                     <a class="btn btn-add btn-sm" href="~/PhongKho/ThemKho" title="Thêm" style="margin-left:20px;">
                         <i class="fas fa-plus"></i>
                         Thêm kho mới
+                    </a>
+                    <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Làm mới" href="/PhongKho/QuanLyKho" style="margin-left:20px;">
+                        <i class="fas fa-copy"></i> 
+                        Làm mới danh sách
                     </a>
                 </div>
                 <table class="table table-hover table-striped table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
@@ -124,7 +146,7 @@
         this.printTable = function () {
             var tab = document.getElementById('sampleTable');
             var win = window.open('', '', 'height=700,width=700');
-            
+
             win.document.write(tab.outerHTML);
             win.document.close();
             win.print();
