--- a/Test02/Views/KhachHang/PageDatHang.cshtml
+++ b/Test02/Views/KhachHang/PageDatHang.cshtml
@@ -32,7 +32,7 @@
                                 double total = item.idSP.Gia.Value * item.soLuong;
                                 <tr>
                                     <td style="text-align: center">@Html.DisplayFor(model => item.idSP.TenSP)</td>
-                                    <td style="width: 100px; height: 100px;"><img src="@item.idSP.HinhAnh" style="width: 100px; height: 100px;"></img></td>
+                                    <td style="width: 100px; height: 100px;"><img src="@item.idSP.HinhAnh" style="width: 100px; height: 100px;"></td>
                                     <td style="text-align: center">
                                         @{var gia = string.Format("{0:0,0 VNĐ}", item.idSP.Gia);}
                                         @Html.DisplayFor(model => gia)
